添加README，修改模板默认为硕士论文

--- a/template/template.tex
+++ b/template/template.tex
@@ -1,4 +1,4 @@
-\documentclass[format=draft,language=chinese,degree=bachelor]{hustthesis}
+\documentclass[format=draft,language=chinese,degree=master]{hustthesis}
 
 \usepackage{graphicx}
 \usepackage{verbatim}
