将论文模板template.tex中基本信息、摘要和致谢部分拆分成独立的文件

--- a/template/template.tex
+++ b/template/template.tex
@@ -8,34 +8,10 @@
 \usepackage{float}
 \usepackage{booktabs}
 
-\stuno{M201371728}
-\schoolcode{10487}
-\title{基于XXX的YYY系统}{A YYY System based on XXX}
-\author
-{林寿山}{Lin Shoushan}
-\major
-{电子信息与通信学院}{School of Electronic Information and Comunications}
-\supervisor
-{许炜\hspace{1em}副教授}{Ass. Prof. Wei Xu}
-\date{2015}{12}{12}
-
-\zhabstract{
-    这这是一个\LaTeX{}模板使用实例文件，该模板用于华中科技大学毕业设计、学士论文、硕士论文和博士论文写作中。
-
-    该模板基于LPPL v1.3发行。
-
-}
-\zhkeywords{\LaTeX{}，华中科技大学，论文，模板}
-
-\enabstract
-{
-    This is a \LaTeX{} template example file. This template is used in written thesis for Huazhong Univ. of Sci. \& Tech.
-
-    This template is published under LPPL v1.3 License.
-
-}
-\enkeywords
-{\LaTeX{}, Huazhong Univ. of Sci. \& Tech., Thesis, Template}
+% 基本信息
+\input{info}
+% 摘要
+\input{abstract}
 
 \begin{document}
 
@@ -47,14 +23,14 @@
 \listoftables
 \mainmatter
 
+% 正文主体，md生成的tex脚本将插入到此处
 $body$
 
 \backmatter
 
-\begin{ack}
-致谢正文。
-\end{ack}
-
+% 致谢
+\input{thanks}
+% 参考文献（引用ref.bib）
 \bibliography{ref}
 
 \end{document}
