删除thanks.md，添加ELWG版的示例论文md

--- a/template/template.tex
+++ b/template/template.tex
@@ -18,8 +18,11 @@
 \frontmatter
 \maketitle
 \makeabstract
+% 目录
 \tableofcontents
+% 图片索引（如不需要可注释掉）
 \listoffigures
+% 表格索引（如不需要可注释掉）
 \listoftables
 \mainmatter
 
