填充ELWG example的正文部分，并附上图片和表格示例

--- a/template/template.tex
+++ b/template/template.tex
@@ -21,9 +21,9 @@
 % 目录
 \tableofcontents
 % 图片索引（如不需要可注释掉）
-\listoffigures
+% \listoffigures
 % 表格索引（如不需要可注释掉）
-\listoftables
+% \listoftables
 \mainmatter
 
 % 正文主体，md生成的tex脚本将插入到此处
