--- a/template/template.tex
+++ b/template/template.tex
@@ -8,6 +8,18 @@
 \usepackage{float}
 \usepackage{booktabs}
 
+% HACK: 定义两个调整\includegraphics图片尺寸以适应页面宽度的命令
+% Scale images if necessary, so that they will not overflow the page
+% margins by default, and it is still possible to overwrite the defaults
+% Usage: \includegraphics[width=\maxwidth, height=\maxheight]{my-image.png}
+% Refer to: http://tex.stackexchange.com/questions/159948/pandoc-generated-pdf-contains-large-images-how-can-i-make-them-fit-into-the-pag
+$endif$
+$if(graphics)$
+\makeatletter
+\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
+\makeatother
+
 % 基本信息
 \input{info}
 % 摘要
