添加thesis-elwg-example项目

--- a/src/thesis-elwg-example/info.tex
+++ b/src/thesis-elwg-example/info.tex
@@ -3,7 +3,7 @@
 % 学校编号，华中科技大学是10487
 \schoolcode{10487}
 % 论文中英文标题（英文可选）
-\title{基于XXX的YYY系统}{A YYY System based on XXX}
+\title{基于XXX的YYY系统（例子：thesis-elwg-example）}{A YYY System based on XXX(Example: thesis-elwg-example)}
 % 作者中英文姓名（英文可选）
 \author{林寿山}{Lin Shoushan}
 % 中英文学院或专业（英文可选）
@@ -11,4 +11,4 @@
 % 导师中英文姓名（英文可选）
 \supervisor{许炜\hspace{1em}副教授}{Ass. Prof. Wei Xu}
 % 答辩日期
-\date{2015}{12}{12}
+\date{2015}{12}{22}
