--- a/template/template.tex
+++ b/template/template.tex
@@ -8,23 +8,8 @@
 \usepackage{float}
 \usepackage{booktabs}
 
-% HACK: 定义两个调整\includegraphics图片尺寸以适应页面宽度的命令
-% Scale images if necessary, so that they will not overflow the page
-% margins by default, and it is still possible to overwrite the defaults
-% Usage: \includegraphics[width=\maxwidth, height=\maxheight]{my-image.png}
-% Refer to: http://tex.stackexchange.com/questions/159948/pandoc-generated-pdf-contains-large-images-how-can-i-make-them-fit-into-the-pag
-$if(graphics)$
-\makeatletter
-\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
-\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
-\makeatother
-$endif$
-
-% HACK: 针对最新版的Pandoc v1.15.2，其在生成列表时改用了命令\tightlist而产生编译错误
-% 更新以下命令即可解决
-% Refer to: https://github.com/jgm/pandoc/pull/1571
-\newcommand{\tightlist}{%
-  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+% 对原有的模板进行一些特殊扩展
+\input{template_extend}
 
 % 基本信息
 \input{info}
